check having query